src/test/compile-fail/issue/issue-36881.rs
// Copyright 2016 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

// aux-build:issue-36881-aux.rs

fn main() {
    #[allow(unused_extern_crates)]
    extern crate issue_36881_aux;
    use issue_36881_aux::Foo; //~ ERROR unresolved import
}
